@@ -2,6 +2,7 @@ Release notes
 -------------
 
 Date          Version   Comment
+2018/06/04    1.3.7     Support Privacy API for GDPR compliance
 2017/11/12    1.3.6     Treat formatted lists as Bullet Lists, remove default line-height property
 2017/09/11    1.3.5     Disable Word Import button if the editor field does not support filearea
 2017/08/25    1.3.4     Don't raise the memory limit for XSLT any more
